hello-service/src/main/kubefiles/canary-deployment/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-hello-blue
  namespace: quarkus-hello-demo
  labels:
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus-hello
      namespace: quarkus-hello-demo
  template:
    metadata:
      labels:
        app: quarkus-hello
        namespace: quarkus-hello-demo
        version: blue
    spec:
      containers:
        - name: quarkus-hello
          image: moduscreate/quarkus-hello-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /hello-service/health/live
          readinessProbe:
            httpGet:
              path: /hello-service/health/ready
              port: 8080
