hello-service/src/main/kubefiles/canary-deployment/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-hello-green
  namespace: quarkus-hello-demo
  labels:
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus-hello
      namespace: quarkus-hello-demo
  template:
    metadata:
      labels:
        app: quarkus-hello
        namespace: quarkus-hello-demo
        version: v2
    spec:
      containers:
        - name: quarkus-hello
          image: moduscreate/quarkus-hello-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /hello-service/health/live
          readinessProbe:
            httpGet:
              path: /hello-service/health/ready
              port: 8080
