hello-service/src/main/kubefiles/canary-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-hello
  namespace: quarkus-hello-demo
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: quarkus-hello
    namespace: quarkus-hello-demo
