hello-service/src/main/kubefiles/canary-deployment/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: quarkus-hello-gateway
    namespace: quarkus-hello-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
