hello-service/src/main/kubefiles/canary-deployment/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quarkus-hello
  namespace: quarkus-hello-demo
spec:
  host: quarkus-hello
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
